--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             border: 2px solid #D1D5DB; /* gray-300 */
             user-select: none; /* Prevents text selection during drag */
             touch-action: none; /* Improve touch interactions */
+            /* --- FIX: Added padding and gap for a buffer --- */
+            padding: 0.25rem; /* Adds a small buffer around the entire grid */
+            gap: 1px; /* Adds a tiny space between each cell */
         }
         .grid-cell {
             display: flex;
@@ -35,6 +38,7 @@
             color: #374151; /* gray-700 */
             cursor: pointer;
             transition: background-color 0.1s ease-in-out;
+            border-radius: 2px; /* Slightly round the cell corners */
         }
         .selecting {
             background-color: #FBBF24; /* amber-400 */
@@ -480,3 +484,11 @@
 
 </body>
 </html>
+```
+
+I've made a couple of small but effective changes to the CSS for the game grid:
+
+1.  **Padding:** I added `padding: 0.25rem;` to the `#game-grid`. This creates a small amount of space between the outer border and the grid cells.
+2.  **Gap:** I also added `gap: 1px;` to the grid. This puts a tiny space between each individual letter cell, which helps with the visual clarity and further prevents any letters from touching the outer edge.
+
+The result is a clean buffer around the entire word search, so the letters on the edges should now be fully visib
